# Application-usage-duration

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: architecture-plan.md  dev-log.md  release-guide.md
docs/superpowers/plans/: 2026-05-16-performance-and-release-plan.md
docs/superpowers/specs/: 2026-05-21-import-data-design.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  icon.rs  lib.rs  main.rs  tracker.rs  tray.rs
src/components/: AppNames.ts  AppRanking.tsx  CategoryIcons.tsx  Dashboard.tsx  DatePicker.tsx  DateRangePicker.tsx  LanguageSwitcher.tsx  SettingsPage.tsx  StackedBarChart.tsx  ToastStack.tsx  UsageCharts.tsx
src/components/appManagement/: AppManagement.tsx  AppTable.tsx  filterApps.ts
src/components/breakdown/: DateRangePicker.tsx
src/components/categoryManagement/: CategoryIconPicker.tsx  CategoryManagement.tsx  CategoryTable.tsx  CreateCategoryDialog.tsx
src/components/dashboard/: AppRanking.tsx  DateNavigator.tsx  DatePicker.tsx  filterDashboardItems.ts
src/components/settings/: DataIO.tsx  IdleThreshold.tsx  IgnoredApps.tsx  ImportDialog.tsx  LanguageSelect.tsx  LanguageSwitcher.tsx  Retention.tsx  UpdateChecker.tsx
src/components/shared/: ConfirmDialog.tsx  DataTable.tsx  DropdownMenu.tsx  EditableCell.tsx  InfoTooltip.tsx  Switch.tsx  ToastStack.tsx
src/i18n/: context.tsx  en-US.json  index.ts  zh-CN.json
src/stores/: iconCache.test.ts  iconCache.ts  useStore.ts
src/themes/: colors.ts
src/types/: index.ts
src/utils/: chartColors.ts  dates.test.ts  dates.ts  displayNames.ts  exportUtils.test.ts  exportUtils.ts  importUtils.test.ts  importUtils.ts
